--- a/src/pages/app/gameuser/gameplay/gameplay.module.css
+++ b/src/pages/app/gameuser/gameplay/gameplay.module.css
@@ -44,10 +44,10 @@
   color: var(--black);
   margin-top: 0.5rem;
   max-height: 9rem;
-  display: -webkit-box;
-  -webkit-line-clamp: 5; /* Number of lines to show */
+  /* display: -webkit-box;
+  -webkit-line-clamp: 5; 
   -webkit-box-orient: vertical;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis; */
   overflow: auto;
 }
 
